--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <h1>ASOCIACION AMIGOS DE LOS ANIMALES GRANADA</h1>
 
        <div align="center">
-       <img src="imgs\aaag.jpg">    
+       <img src="imgs\mini.jpg">    
        </div>
        
         <script type="text/javascript" src="phonegap.js"></script>
