--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
         <title>Hello World</title>
     </head>
     <body>
-       <h1>ASOCIACION AMIGOS DE LOS ANIMALES GRANADA</h1>
+       <h1 style="text-align:center;">ASOCIACION AMIGOS DE LOS ANIMALES GRANADA</h1>
 
        <div align="center">
-       <img src="imgs\mini.jpg">    
+       <img src="imgs\mini.jpg"> 
+       <br />  
+       <input type="name" placeholder="usuario"> 
+       <br />
+       <input type="password" placeholder="contraseÃ±a">
        </div>
        
         <script type="text/javascript" src="phonegap.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             <script type="text/javascript" charset="utf-8">
 
